--- a/lights.yaml
+++ b/lights.yaml
@@ -2,27 +2,27 @@ states:
     flash: false
     leds: true
     intensity: 1.0
-    button: 'FLASH'
-    color: 'B2'
+    button: 'KEY_W0'
+    color: 'KEY_W0'
 
 config:
     increment: 0.1
     rgb_codes:
-        OFF: [0, 0, 0]
-        R0: [255, 0, 0]
-        R1: [255, 64, 0]
-        R2: [255, 128, 0]
-        R3: [255, 192, 0]
-        R4: [255, 255, 0]
-        G0: [0, 255, 0]
-        G1: [0, 255, 128]
-        G2: [0, 255, 192]
-        G3: [0, 192, 255]
-        G4: [0, 128, 255]
-        B0: [0, 0, 255]
-        B1: [64, 0, 255]
-        B2: [128, 0, 255]
-        B3: [192, 0, 255]
-        B4: [255, 0, 255]
-        W: [255, 255, 255]
+        KEY_OFF: [0, 0, 0]
+        KEY_R0: [255, 0, 0]
+        KEY_R1: [255, 64, 0]
+        KEY_R2: [255, 128, 0]
+        KEY_R3: [255, 192, 0]
+        KEY_R4: [255, 255, 0]
+        KEY_G0: [0, 255, 0]
+        KEY_G1: [0, 255, 128]
+        KEY_G2: [0, 255, 192]
+        KEY_G3: [0, 192, 255]
+        KEY_G4: [0, 128, 255]
+        KEY_B0: [0, 0, 255]
+        KEY_B1: [64, 0, 255]
+        KEY_B2: [128, 0, 255]
+        KEY_B3: [192, 0, 255]
+        KEY_B4: [255, 0, 255]
+        KEY_W0: [255, 255, 255]
 
