Update remote and key names.

--- a/lircd.conf
+++ b/lircd.conf
@@ -14,7 +14,7 @@
 
 begin remote
 
-  name  /home/pi/lircd.conf
+  name  remote-lights
   flags RAW_CODES
   eps            30
   aeps          100
@@ -23,7 +23,7 @@ begin remote
 
       begin raw_codes
 
-          name KEY_0
+          name KEY_OFF
              9548    4401     703     465     697     461
               703     456     695     464     693     465
               716     440     716     439     693     464
@@ -37,7 +37,7 @@ begin remote
               686    1573     686    1573     661    1596
               662   40776    9455    2150     688
 
-          name KEY_1
+          name KEY_ON
              9684    4388     738     436     751     423
               738     439     715     451     705     460
               707     462     706     460     707     461
@@ -51,7 +51,7 @@ begin remote
               700    1594     695    1570     672    1594
               672   40733    9651    2117     705
 
-          name KEY_BRIGHTNESSUP
+          name KEY_BUP
              9528    4403     697     462     693     464
               695     461     695     464     716     440
               692     465     715     439     693     465
@@ -65,7 +65,7 @@ begin remote
               686    1573     664    1595     666    1594
               665   40642    9487    2147     716
 
-          name KEY_BRIGHTNESSDOWN
+          name KEY_BDOWN
              9565    4380     697     462     696     460
               720     438     697     462     720     438
               720     438     697     462     696     462
@@ -79,7 +79,7 @@ begin remote
               667    1616     645    1594     668    1593
               667   40747    9553    2145     698
 
-          name KEY_F1
+          name KEY_R0
              9613    4401     726     437     725     437
               704     459     702     461     700     460
               722     438     719     438     727     436
@@ -93,7 +93,7 @@ begin remote
               671    1591     693    1571     693    1569
               695   40603    9616    2140     705
 
-          name KEY_F2
+          name KEY_R1
              9683    4371     720     460     713     458
               738     435     735     437     717     454
               709     460     708     460     720     454
@@ -107,7 +107,7 @@ begin remote
               691    1549     705    1588     679    1591
               700   40372    9494    2118     722
 
-          name KEY_F3
+          name KEY_R2
              9624    4349     722     434     692     461
               717     441     715     440     692     462
               697     461     721     443     716     437
@@ -121,7 +121,7 @@ begin remote
               666    1596     665    1594     697    1568
               696   40379    9617    2118     721
 
-          name KEY_F4
+          name KEY_R3
              9540    4394     695     464     692     462
               692     462     717     440     695     462
               696     461     694     463     715     440
@@ -135,7 +135,7 @@ begin remote
               689    1568     716    1568     690    1569
               663   40735    9467    2127     713
 
-          name KEY_F5
+          name KEY_R4
              9603    4375     741     435     729     435
               723     438     698     470     686     460
               719     439     696     461     697     460
@@ -149,7 +149,7 @@ begin remote
               694    1594     673    1562     730    1570
               679   40244    9592    2144     696
 
-          name KEY_F6
+          name KEY_G0
              9634    4361     704     462     701     459
               724     438     697     462     696     463
               717     439     694     461     696     462
@@ -163,7 +163,7 @@ begin remote
               708    1590     678    1592     697    1571
               675   40615    9614    2139     704
 
-          name KEY_F7
+          name KEY_G1
              9804    4329     759     433     741     433
               741     429     744     432     738     430
               737     433     736     437     732     435
@@ -177,7 +177,7 @@ begin remote
               697    1564     679    1592     673    1564
               705   40696    9538    2120     695
 
-          name KEY_F8
+          name KEY_G2
              9503    4400     696     461     695     462
               716     442     722     436     701     461
               730     435     707     460     700     462
@@ -191,7 +191,7 @@ begin remote
               681    1590     705    1536     738    1569
               708   40449    9684    2118     705
 
-          name KEY_F9
+          name KEY_G3
              9556    4380     724     437     720     441
               723     437     723     437     696     459
               720     440     714     437     696     490
@@ -205,7 +205,7 @@ begin remote
               719    1571     668    1594     692    1571
               691   40700    9536    2144     695
 
-          name KEY_F10
+          name KEY_G4
              9511    4400     720     439     712     440
               713     437     714     440     693     463
               715     439     717     440     717     438
@@ -219,7 +219,7 @@ begin remote
               691    1594     665    1593     686    1571
               696   40717    9391    2146     689
 
-          name KEY_F11
+          name KEY_B0
              9628    4376     700     459     699     459
               709     452     722     435     726     435
               704     456     731     437     732     438
@@ -233,7 +233,7 @@ begin remote
               702    1566     703    1568     680    1588
               705   40363    9977    2109     748
 
-          name KEY_F12
+          name KEY_B1
              9676    4371     725     437     728     439
               705     460     726     436     727     434
               728     437     723     435     730     437
@@ -247,7 +247,7 @@ begin remote
               666    1593     683    1577     664    1593
               703   40619    9495    2172     688
 
-          name KEY_F13
+          name KEY_B2
              9671    4373     731     435     732     436
               712     460     726     435     725     440
               718     438     721     436     723     438
@@ -261,7 +261,7 @@ begin remote
               674    1593     695    1542     724    1570
               672   40503    9533    2143     698
 
-          name KEY_F14
+          name KEY_B3
              9499    4355     715     444     724     436
               723     436     699     462     690     461
               708     448     717     436     723     433
@@ -275,7 +275,7 @@ begin remote
               695    1592     666    1593     666    1593
               668   40668    9457    2148     711
 
-          name KEY_F15
+          name KEY_B4
              9538    4379     715     439     714     436
               689     461     690     460     695     464
               688     492     685     437     716     441
@@ -289,7 +289,7 @@ begin remote
               690    1595     662    1593     663    1592
               686   40714    9422    2145     692
 
-          name KEY_F16
+          name KEY_W0
              9661    4373     700     461     701     460
               698     461     724     437     701     462
               700     461     701     463     722     437
@@ -303,7 +303,7 @@ begin remote
               733    1570     675    1594     692    1542
               724   40522    9557    2143     718
 
-          name KEY_A
+          name KEY_FLASH
              9553    4350     695     464     693     461
               697     460     717     437     695     464
               692     460     699     459     702     459
@@ -317,7 +317,7 @@ begin remote
               691    1569     693    1569     686    1577
               674   40494    9584    2120     696
 
-          name KEY_B
+          name KEY_STROBE
              9533    4372     704     459     722     448
               714     437     720     443     722     438
               698     461     700     460     723     438
@@ -331,7 +331,7 @@ begin remote
               669    1593     668    1594     691    1571
               674   40671    9481    2143     692
 
-          name KEY_C
+          name KEY_FADE
              9645    4376     733     435     734     438
               726     438     725     440     725     436
               728     437     700     463     723     436
@@ -345,7 +345,7 @@ begin remote
               728    1570     674    1592     672    1594
               696   40612    9595    2119     724
 
-          name KEY_D
+          name KEY_SMOOTH
              9591    4401     693     461     692     469
               685     460     692     461     692     491
               685     439     691     461     692     462
